kubernetes/apps/kube-system/cilium/policies/allow-glpi-internal.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# Glpi internal: nginx, php-fpm, mariadb and valkey share the same Helm instance label
# and are the only pods allowed to talk to each other within the default namespace
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-glpi-internal
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: default
      app.kubernetes.io/instance: glpi
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: default
            app.kubernetes.io/instance: glpi
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: default
            app.kubernetes.io/instance: glpi
